--- a/lab3.html
+++ b/lab3.html
@@ -1,6 +1,8 @@
-#INST 377
-#Navtej Soma
-#Lab 3
+<!--
+  Navtej Soma
+  Lab 3
+  INST377
+-->
 <head>
     <link rel="stylesheet" href="lab3.css">
 </head>
